<resources>
    <string name="app_name">Whole Health Experience</string>
    <string name="str_splash_header_first">Welcome To</string>
    <string name="str_splash_header_second">Whole Health</string>
    <string name="str_sigin_in_with_anthem">Sign In with</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_terms_of_use">Terms Of Use</string>
    <string name="str_enter_email_username">Email Address Or Username</string>
    <string name="str_password">Password</string>
    <string name="str_login_to_member_account">Log in to your member account</string>
    <string name="str_login">Log In</string>
    <string name="str_forYou">For You</string>
    <string name="str_care">Care</string>
    <string name="str_meds">Meds</string>
    <string name="str_activity">Activity</string>
    <string name="str_email_error_msg">Email should not be empty</string>
    <string name="str_password_error_msg">Password should not be empty</string>
    <string name="str_invalid_credential">Invalid Credentials. Please check</string>
    <string name="str_healthier_living_each_day">Healthier living each day</string>
    <string name="str_form_health">Form healthy habits and keep yourself accountable through tools like a short list of healthy activities that can keep your days and weeks on track.</string>
    <string name="str_get_started">Get Started</string>
    <string name="str_for_date">For %s</string>
    <string name="str_get_free_tracker">Get free tracker</string>
    <string name="str_get_free_tracker_description">Get a free activity tracker and keep it with by doing goals each week.</string>
    <string name="str_get">Get</string>
    <string name="str_not_now">Not Now</string>
    <string name="str_import">Import</string>
    <string name="str_import_meds">Import your meds</string>
    <string name="str_import_meds_description">We can automatically import your prescription data for you.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_medication_submit_button_none">I’m Taking None of Those</string>
    <string name="which_medications_still_taking">Which medications are you still taking?</string>
    <string name="select_medications_info">Select which meds you’re still taking:</string>
    <string name="retrieving_your_meds">Retrieving your meds…</string>
    <string name="add_medications">Add Medications</string>
    <string name="no_medications_found">No medications found</string>
    <string name="no_medications_found_info">There’re no medications to add right now. New medications from prescription claims may take up to 2 days to appear. \n\nPlease try again later.</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="add_medications_error_info">We couldn’t retrieve your medications.\nPlease try again later.</string>
    <string name="try_again">Try Again</string>
    <string name="add_medication_submit_button_one_medications">I’m Taking %1s</string>
    <string name="add_medication_submit_button_more_than_one_medications">I’m Taking %1d Medications</string>
    <string name="str_imported_medication">Imported %s medications</string>
    <string name="str_completed">Completed</string>
    <string name="str_skipped">Skipped</string>
    <string name="retrieving_data">Retrieving data…</string>
    <string name="prescription_details">Prescription Details</string>
    <string name="prescribed_by">Prescribed by</string>
    <string name="last_filled_by">Last Filled by</string>
    <string name="view_on_maps">View on Maps</string>
    <string name="im_not_taking_this_any_more">I’m not taking this anymore</string>
    <string name="add_condition">Add Condition</string>
    <string name="add_notes">Add Notes</string>
    <string name="delete_reminder">Delete</string>
    <string name="text_colon">:</string>
    <string name="str_medication">Medications</string>
    <string name="str_remind_me_everyday">Remind me every day at</string>
    <string name="str_get_help_now">Get Help Now</string>
    <string name="str_24_7_helpline">24/7 Nurseline</string>
    <string name="str_our_nurse_can_assist">Our nurses can assist you with other needs, any time or day.</string>
    <string name="str_your_meds">Your Meds</string>
    <string name="str_add_meds">Add Meds</string>
    <string name="str_add_med">Add Med</string>
    <string name="str_new_medication_from_prescription">New medications from prescription claims may take up to 2 days to appear.</string>
    <string name="str_you_have_no_meds">You Have No Meds</string>
    <string name="str_you_have_no_meds_description">You currently have no medications. New medications from prescription claims may take up to 2 days to appear.</string>
    <string name="remove_medication_title">Remove Medication?</string>
    <string name="remove_medication_message">Are you sure you want to remove %1s from your medications?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="permission_needed_description">We need your permission to send you reminders. Please go to Settings and enable notifications to set a reminder.</string>
    <string name="add_medication_submit_button_one_medications_add">Add %1s</string>
    <string name="add_medication_submit_button_more_than_one_medications_add">Add %1d Medications</string>
    <string name="select_at_least_one">Select at least one</string>
    <string name="str_added_medication">%s Added</string>
    <string name="str_added_more_than_one_medication">%s Medications Added</string>
    <string name="str_meds_was_removed">%s was removed</string>
    <string name="str_new_prescription">New Prescription</string>
    <string name="str_we_found_medications">We found %s new prescriptions based on your recent claims data:</string>
    <string name="str_we_found_medication">We found %s new prescription based on your recent claims data:</string>
    <string name="str_select_meds">Select Meds</string>
    <string name="str_add_meds_count">Add %s Meds</string>
    <string name="str_dont_add">Don\'t Add</string>
    <string name="str_added_new_prescription">Added %s new prescription</string>
    <string name="str_added_multiple_new_prescription">Added %s new prescriptions</string>
    <string name="add_reminder">Add a Reminder</string>
    <string name="edit_reminder">Reminder</string>
    <string name="button_add_reminder">Add %s Reminder</string>
    <string name="button_change_reminder">Change Reminder to %s</string>
    <string name="button_reminder_exists">A %s Reminder is Set Already</string>
    <string name="title_call_permission_denied">Need Permission to Call Nurseline for You</string>
    <string name="message_call_permission_denied">To call Nurseline Whole Health needs your permission to start calls. Please enable this permission in Settings.</string>
    <string name="settings">Settings</string>
    <string name="reminder_deleted">Reminder Deleted</string>
    <string name="i_consent">I Consent</string>
    <string name="str_healthier_living_carelon">Healthier living\nwith Carelon</string>
    <string name="str_lets_get_started">Let\’s Get Started</string>
    <string name="str_ready_to_start">Ready to start your journey?</string>
    <string name="str_confirm_email">Confirm email</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_make_information_upto_date">Let’s make sure your information is up to date.</string>
    <string name="str_pick">Pick</string>
    <string name="str_pick_focus_area">Pick a focus area</string>
    <string name="str_select_area_of_focus">Select one or two things to focus on and start earning rewards.</string>
    <string name="button_lets_go">Let’s Go!</string>
    <string name="str_welcome_title">Welcome</string>
    <string name="str_welcome_description">We’ve added some steps for you to start with to get your first reward.</string>
    <string name="str_some_steps">some steps</string>
    <string name="str_bonus_rewards_text">Complete your first steps to earn a bonus reward of $10!</string>
    <string name="str_first_steps">first steps</string>
    <string name="str_bonus_rewards">bonus reward of $10!</string>
    <string name="str_welcome">Welcome</string>
    <string name="str_i_agree">I Agree</string>
    <string name="str_complete_forYou_steps">Get a $10 bonus reward by completing the steps above.</string>
    <string name="str_part_of_reward">Part of a reward</string>
    <string name="str_your_email">Your Email</string>
    <string name="str_please_enter_email">Please enter your email address:</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_your_email_address">Your email address</string>
    <string name="str_enter_email_address">Enter Email Address</string>
    <string name="str_send_email_verification">Send Email Verification</string>
    <string name="str_your_focus_areas">Your Focus Areas</string>
    <string name="str_your_focus_areas_desc">Health is all about daily steps. Select one or more focus areas to start your journey.</string>
    <string name="button_pick_one_option_to_continue">Pick One Option to Continue</string>
    <string name="str_earn_rewards">Earn rewards</string>
    <string name="str_ready_to_earn_reward">Ready to earn rewards</string>
    <string name="str_not_right_now">Not Right Now</string>
    <string name="button_import_meds">Import Meds</string>
    <string name="str_import_meds_desc">We can import your meds based on your claims data, to help you better keep track of them.</string>
    <string name="str_set_daily_reminders">Set daily reminders</string>
    <string name="str_see_prescription_details">See prescription details</string>
    <string name="str_add_notes">Add notes about your meds</string>
    <string name="str_by_importing_you_can">By importing you can:</string>
    <string name="this_code_is_incorrect">This code is incorrect.</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_code_info">We’ve sent a six-digit code to your email address, please enter it below:</string>
    <string name="submit_code">Submit Code</string>
    <string name="code_resent">Code Resent</string>
    <string name="email_verified">Email Verified</string>
    <string name="email_verified_info">Your email address was\nsuccessfully verified</string>
    <string name="continue_str">Continue</string>
    <string name="str_loading">Loading...</string>
    <string name="str_daily_check_in_title">Daily Check In</string>
    <string name="str_daily_check_in_description">What time would you like us to ask about the progress you made for the day?</string>
    <string name="button_choose_check_in_time">Choose %s for Check In Time</string>
    <string name="str_will_do_later">I’ll Do This Later</string>
    <string name="str_close_to_earning_bonus">You’re so close to earning your bonus!</string>
    <string name="str_one_step_away_from_bonus">You just have one more step to complete to earn your $10 bonus:</string>
    <string name="str_pick_check_in_time">Pick check in time</string>
    <string name="str_skip_bonus_for_now">Skip Bonus for Now</string>
    <string name="button_pick_and_earn">Pick and Earn $10</string>
    <string name="button_set_up_first_week">Set Up My First Week</string>
    <string name="str_complete_steps_to_earn_reward">Complete your steps each day to earn ongoing rewards.</string>
    <string name="str_your_weekly_plan">Your Weekly Plan</string>
    <string name="str_your_weekly_plan_desc">Health is all about small daily steps. Here’s how to earn your rewards this week.</string>
</resources>