<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.carelon.whe.ui.email_verification.EmailVerifyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_email_verification"
        android:paddingStart="@dimen/common_padding_start"
        android:paddingTop="@dimen/status_bar_padding"
        android:paddingEnd="@dimen/common_padding_end">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fitsSystemWindows="true"
            tools:context=".ui.email_verification.EmailVerificationActivity">

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m20"
                android:clickable="true"
                android:focusableInTouchMode="false"
                android:focusable="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_top_bar"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_header"
                style="@style/headline_h2_semiBold_primary"
                android:layout_marginTop="@dimen/m85"
                android:text="@string/str_your_email"
                app:layout_constraintTop_toBottomOf="@+id/img_close" />

            <TextView
                android:id="@+id/txt_header_description"
                style="@style/body_medium_secondaryLight"
                android:layout_marginTop="@dimen/m5"
                android:text="@string/str_please_enter_email"
                app:layout_constraintTop_toBottomOf="@+id/txt_header" />

            <TextView
                android:id="@+id/txt_email_address"
                style="@style/body_15_semibold_primary"
                android:layout_marginTop="@dimen/m35"
                android:text="@string/str_email_address"
                app:layout_constraintTop_toBottomOf="@+id/txt_header_description" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_email"
                style="@style/edit_medium_email"
                android:layout_marginTop="@dimen/m14"
                android:imeOptions="actionDone"
                android:background="@drawable/drawable_edit_bg_purple"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/m14"
                android:hint="@string/str_your_email_address"
                android:textCursorDrawable="@drawable/drawable_cursor_purple"
                android:textSelectHandle="@drawable/drawable_cursor_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email_address" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                style="@style/button_normal_rounded"
                android:layout_width="match_parent"
                android:layout_height="@dimen/m44"
                android:layout_marginBottom="@dimen/m30"
                android:background="@drawable/button_gray_rounded"
                android:backgroundTint="@color/light_gray_add_medication"
                android:text="@string/str_enter_email_address"
                android:textColor="@color/medium_gray"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>