<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="com.carelon.whe.ui.startup.GetStartedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.startup.GetStartedActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/getready_bg"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_header_first"
            style="@style/headline_h2_semiBold_secondary"
            android:lineSpacingExtra="@dimen/later_spacing_small"
            android:layout_marginStart="@dimen/m60"
            android:layout_marginEnd="@dimen/m60"
            android:layout_marginBottom="@dimen/m10"
            android:text="@string/str_healthier_living_each_day"
            app:layout_constraintBottom_toTopOf="@+id/txt_header_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/txt_header_description"
            style="@style/body_medium_regular_secondary"
            android:lineSpacingExtra="@dimen/later_spacing_large"
            android:text="@string/str_form_health"
            android:layout_marginBottom="@dimen/m20"
            app:layout_constraintStart_toStartOf="@+id/txt_header_first"
            app:layout_constraintEnd_toEndOf="@+id/txt_header_first"
            app:layout_constraintBottom_toTopOf="@+id/btn_get_started"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_started"
            style="@style/button_medium_purple"
            android:layout_marginBottom="@dimen/m90"
            android:text="@string/str_get_started"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_header_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>