<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tool="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_header"
            style="@style/headline_h4_semiBold_primary"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tool:text="Custom Title" />

        <TextView
            android:id="@+id/txt_subHeader"
            style="@style/body_17_medium_secondaryLight"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/m10"
            android:layout_marginEnd="@dimen/m20"
            android:lineSpacingExtra="@dimen/line_spacing_medium"
            app:layout_constraintEnd_toStartOf="@+id/btn_action"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_header"
            tool:text="Custom Subtitle that we can set" />

        <TextView
            android:id="@+id/txt_part_of_reward"
            style="@style/body_17_medium_secondaryLight"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/m10"
            android:layout_marginEnd="@dimen/m20"
            android:drawableStart="@drawable/ic_star_gray"
            android:drawablePadding="@dimen/m12"
            android:lineSpacingExtra="@dimen/line_spacing_medium"
            app:layout_constraintEnd_toStartOf="@+id/btn_action"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_subHeader"
            tool:text="@string/str_part_of_reward" />

        <TextView
            android:id="@+id/txt_step_success"
            style="@style/body_17_medium_green"
            android:layout_marginTop="@dimen/m10"
            android:drawableStart="@drawable/ic_import_meds_success"
            android:drawablePadding="@dimen/m10"
            android:lineSpacingExtra="@dimen/line_spacing_medium"
            android:text="@string/str_completed"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/txt_header"
            app:layout_constraintTop_toBottomOf="@+id/txt_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_action"
            style="@style/button_small_purple"
            app:layout_constraintEnd_toEndOf="parent"
            tool:text="@string/str_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>